--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="action_sign_in_short">Sign in</string>
     <string name="error_invalid_email">This user name is invalid</string>
     <string name="error_invalid_password">This password is too short</string>
-    <string name="error_incorrect_password">This password is incorrect</string>
+    <string name="error_incorrect_password">The password does not match username</string>
     <string name="error_field_required">This field is required</string>
     <string name="logging_in">Logging in&#8230;</string>
 
