--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="error_field_required">This field is required</string>
     <string name="logging_in">Logging in&#8230;</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <!-- feed contract -->
+    <string name="CONTENT_AUTHORITY">com.guanqing.subredditor</string>
 
 </resources>
