--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Subreddit Reader</string>
+    <string name="app_name">Redgram</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_login">Sign in</string>
 
