--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Redgram</string>
+    <string name="package_name">com.guanqing.subredditor</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_login">Sign in</string>
 
