updates baseFragment and MainFragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,9 @@
     <string name="title_activity_login">Sign in</string>
 
     <!-- Strings related to login -->
+    <string name="client_id">p6NSlEAAL8HerQ</string>
+    <string name="redirect_url">http://haoguanqing.github.io/Tests-Misc-for-Android/</string>
+
     <string name="prompt_username">User name</string>
     <string name="prompt_password">Password</string>
     <string name="action_sign_in">Sign in</string>
