--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="package_name">com.guanqing.subredditor</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_login">Sign in</string>
+    <string name="title_activity_webview">Browser</string>
 
     <!-- Main fragment refresh strings -->
     <string name="pulldown_refresh_text">pull to refresh</string>
